Changes to CSS better layout practices Alertbox now no longer pushes anything offscreen.

--- a/Web_Dashboard/src/app/admin/mapview/mapview.component.scss
+++ b/Web_Dashboard/src/app/admin/mapview/mapview.component.scss
@@ -5,3 +5,9 @@ mat-sidenav {
 #map {
   height: 100%;
 }
+
+.sidenav-column {
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
